--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.16.4",
     "express-fileupload": "^0.3.0",
     "fs": "0.0.1-security",
+    "googlemaps": "^1.12.0",
     "jquery": "^3.3.1",
     "mkdirp": "^0.5.1",
     "mongoose": "^4.13.17",
